--- a/illiad/Logon2.html
+++ b/illiad/Logon2.html
@@ -35,9 +35,7 @@
 
                     <label class="logon-label" for="password">
                         <span class="field">
-                                <strong>Last Name</strong>
-                                <br>
-                                <span class="note">Use CAPS please</span>
+                                <strong>Password*</strong>
                         </span>
                         <input id="password" name="Password" type="password" class="f-name" /><br />
                     </label>
@@ -45,7 +43,10 @@
                     <div class="f-submit-wrap">
                         <input type="submit" name="SubmitButton" value="Logon" class="f-submit" /><br />
                     </div>
-
+                        
+                       <p><strong>*</strong>If you have not set a password in the past, please log in using your last name in <u>all capital letters</u>. An upgrade to the system in January 2020 now allows for users to set their own passwords.
+                        </p>
+                        
                 </fieldset>
                 </div>
                 </form>
