--- a/illiad/testweb/include_header.html
+++ b/illiad/testweb/include_header.html
@@ -19,7 +19,7 @@
 </div>
 <ul class="breadcrumb">
     <li><a href="https://library.depaul.edu/Pages/default.aspx" target="_blank">DePaul's Library Home</a></li>
-    <li><a href="<#ACTION action="10" form="10">">ILLiad Main Menu</a></li>
+    <li><a href="<#ACTION action="10" form="10">">ILLiad Main Menu</a> <span style="color:red">TEST ENVIRONMENT: </span></li>
 </ul>
 
 <div id="status">
