--- a/illiad/testweb/Logon.html
+++ b/illiad/testweb/Logon.html
@@ -51,7 +51,8 @@
 
                         <label class="logon-label" for="password">
                             <span class="field">
-                                <strong>Password*</strong>
+                              <strong>Password*</strong><br>
+                                <a href="https://depaullib.illiad.oclc.org/illiad/illiad.dll?Action=10&Form=84">Forgot password?</a>
                             </span>
                             <input id="password" name="Password" type="password" class="f-name" /><br />
                         </label>
