added forgot password link and styling information

--- a/illiad/Logon2.html
+++ b/illiad/Logon2.html
@@ -35,8 +35,8 @@
 
                     <label class="logon-label" for="password">
                         <span class="field">
-                                <strong>Password*</strong>
-                        </span>
+                                <strong>Password*</strong><br/>
+                                <a class="note logonLink" href="https://depaullib.illiad.oclc.org/illiad/illiad.dll?Action=10&Form=84">Forgot password?</a>                                             </span>
                         <input id="password" name="Password" type="password" class="f-name" /><br />
                     </label>
 
