--- a/illiad/testweb/Logon.html
+++ b/illiad/testweb/Logon.html
@@ -52,7 +52,8 @@
                         <label class="logon-label" for="password">
                             <span class="field">
                               <strong>Password*</strong><br>
-                                <a href="https://depaullib.illiad.oclc.org/illiad/illiad.dll?Action=10&Form=84">Forgot password?</a>
+                                <a href="https://depaullib.illiad.oclc.org/illiad/testweb/illiad.dll?Action=10&Form=84">Forgot password?</a> 
+<!--                                                            Ensure use not testweb for prod-->
                             </span>
                             <input id="password" name="Password" type="password" class="f-name" /><br />
                         </label>
