--- a/illiad/testweb/Logon2.html
+++ b/illiad/testweb/Logon2.html
@@ -33,12 +33,14 @@
                         <input id="username" name="Username" type="text" class="f-name" /><br />
                     </label>
 
-                    <label class="logon-label" for="password">
-                        <span class="field">
-                                <strong>Password*</strong>
-                        </span>
-                        <input id="password" name="Password" type="password" class="f-name" /><br />
-                    </label>
+                        <label class="logon-label" for="password">
+                            <span class="field">
+                              <strong>Password*</strong><br>
+                                <a href="https://depaullib.illiad.oclc.org/illiad/testweb/illiad.dll?Action=10&Form=84">Forgot password?</a> 
+<!--                                                            Ensure use not testweb for prod-->
+                            </span>
+                            <input id="password" name="Password" type="password" class="f-name" /><br />
+                        </label>
 
                     <div class="f-submit-wrap">
                         <input type="submit" name="SubmitButton" value="Logon" class="f-submit" /><br />
