--- a/illiad/ForgotPassword.html
+++ b/illiad/ForgotPassword.html
@@ -13,21 +13,19 @@
 
             <div id="content">
 
-                <h1>Forgot Password</h1>
+                <h1>Forgot Password?</h1>
                 <div id="status-request"><#STATUS/></div>
+                    <p>Enter your information below and receive a link to reset your password</p>
 
                 <form action="illiad.dll" method="post" name="ForgotPassword" class="f-wrap-1">
                     <input type="hidden" name="ILLiadForm" value="ForgotPassword">
-
-                        <fieldset>
-
-                            <label for="Username">
-                                <span class="field">
-                                    <span class="<#ERROR name="ERRORUsername">"><strong>Username</strong></span>
-                                </span>
-                                <input id="Username" name="Username" type="text" size="40" class="f-name" value="<#PARAM name="Username">"><br />
-                                <div style="display:none"><input type="text" name="hiddenText"/></div>
-                            </label>
+                        <label class="logon-label" for="username">
+                            <span class="field">
+                                <strong>Library Borrower ID</strong><br />
+                                <a class="note logonLink" target="_blank" href="https://answers.library.depaul.edu/faq/161853">What's my library borrower ID?</a>
+                            </span>
+                            <input id="username" name="Username" type="text" class="f-name" /><br />
+                        </label>
 
                             <div class="f-submit-wrap">
                                 <input type="submit" name="SubmitButton" value="Reset Password" class="f-submit" />
@@ -35,6 +33,7 @@
 
                         </fieldset>
                 </form>
+
 
             <#INCLUDE filename="include_footer.html">
 
