added password parameters to change password page

--- a/illiad/NewPassword.html
+++ b/illiad/NewPassword.html
@@ -44,7 +44,13 @@
                                 <input id="Password2" name="Password2" type="password" size="40" class="f-name" value="<#PARAM name="Password2">"><br />
                             </label>
 
-                            <p>Note: Passwords are case sensitive.</p>
+                            <p>Note: Passwords are case sensitive and must meet the following criteria:</p>
+                            <ul>
+                                <li>Be at least 8 characters long</li>
+                                <li>Contain a lowercase letter</li>
+                                <li>Contain an uppercase letter</li>
+                                <li>Contain a number</li>
+                            </ul>  
 
                             <div class="f-submit-wrap">
                                 <input type="submit" name="SubmitButton" value="Set Password" class="f-submit" />
